[tool.poetry]
name = "repl_python3_beta_thuan-cu-to"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
wikipedia = "^1.4.0"
aiosqlite = "^0.17.0"
pytesseract = "^0.3.8"
numpy = "^1.22.2"
Unidecode = "^1.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
